# dev4-project-directx12

./: .gitignore  CMakeLists.txt  Project Rubric.xlsx  README.md
assets/: Arch.h2b  Arch_Door.h2b  Arch_Door_bottompivot.h2b  Arch_Gothic.h2b  Arch_Gothic_RoundColumn.h2b  Arch_Round.h2b  Arch_Round_RoundColumn.h2b  Arch_bars.h2b  Bag_Coins.h2b  Bag_Standing.h2b  Banner.h2b  Banner_wall.h2b  Barrel.h2b  Barrel2.h2b  BearTrap_Closed.h2b  BearTrap_Open.h2b  Bookcase_Empty.h2b  Bookcase_Full.h2b  Brick.h2b  Bricks.h2b  BridgeSection.h2b  Bucket.h2b  Bush_1x1.h2b  Bush_2x1.h2b  Bush_2x2.h2b  Bush_Large.h2b  Bush_Round.h2b  Candles_1.h2b  Candles_2.h2b  Cart.h2b  Chair.h2b  Character_Animated.h2b  Chest.h2b  Chest_Gold.h2b  Cobweb.h2b  Cobweb2.h2b  Coin_Pile.h2b  Column.h2b  Column2.h2b  Column_BridgeSupport.h2b  (+97 more)
levels/: Cyberpunk.txt  Dan's Dungeon 2.txt  Dan's Dungeon.txt  Earth.txt  Ethan's Bathroom.txt  GameLevel.txt  George.txt  Goblin.txt  Modular Dungeon 3.txt  Modular Dungeon 4.txt  OBJ Exporter.py  OBJ Importer.py  PzVl_Tiger_I.txt  Tank.txt  Textured Example 3.txt  imgui.ini  modular dungeon.blend  modular ruins template.blend  multiple camera test.blend  pbr scene test.blend  textured example 3.blend
shaders/: Lighting.hlsli  PixelShader.hlsl  PixelShaderDebugLines.hlsl  PixelShaderSkybox.hlsl  VertexShader.hlsl  VertexShader2.hlsl  VertexShaderDebugLines.hlsl  VertexShaderSkybox.hlsl
source/: FSLogo.h  debuglinesmanager.cpp  debuglinesmanager.h  frustum.cpp  frustum.h  h2bParser.h  level.cpp  level.h  main.cpp  materialmanager.cpp  materialmanager.h  renderer.cpp  renderer.h  structures.h  texturemanager.cpp  texturemanager.h
textures/: earth_diffuse.dds  earth_specular.dds  uvmapping.dds  uvmapping_2D.dds
